--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang = "en">
 <head>
 <meta charset="UTF-8">
+<title>Simple Web Page</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <body>
   <header>
-    <h1>Porfolio</h1>
+    <h1>Portfolio</h1>
       <nav>
         <a href="file:///C:/Users/mamadoudiallo/Desktop/portfolio/index.html">Home</a> |
         <a href="file:///C:/Users/mamadoudiallo/Desktop/portfolio/about-me.html">About Me</a> |
@@ -18,6 +19,7 @@
       <p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale,
         et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident, souvent intentionnellement (histoire d'y rajouter de petits clins d'oeil, voire des phrases embarassantes).
 </p>
+<p class="Title">Welcom to my Webpage</p>
     </article>
     <aside>
       <h3>List of my Projects</h3>
@@ -25,38 +27,43 @@
         <li> Online Store
           <br>
           <img
-            src="https://cdn.pixabay.com/photo/2017/06/14/23/12/kittens-2403664_960_720.jpg"
-            alt="Adorable gray kitten with blue eyes in brown woven wicker basket."
+            src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/3462e466753187.5b20fc7ed1265.jpg"
+            alt="Add a description of the image here."
             height="200"
             width="250">
+            <div class="desc">Add a description of the image here</div>
           </li>
 
         <li>Mannequin Site
           <br>
           <img
-            src="https://cdn.pixabay.com/photo/2017/06/14/23/12/kittens-2403664_960_720.jpg"
-            alt="Adorable gray kitten with blue eyes in brown woven wicker basket."
+            src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/90105225043685.5c6193f4e9974.jpg"
+            alt="Add a description of the image here."
             height="200"
             width="250">
+            <div class="desc">Add a description of the image here</div>
         </li>
 
         <li>Explore Guinea
           <br>
           <img
-            src="https://cdn.pixabay.com/photo/2017/06/14/23/12/kittens-2403664_960_720.jpg"
-            alt="Adorable gray kitten with blue eyes in brown woven wicker basket."
+            src="https://s0.geograph.org.uk/geophotos/05/79/80/5798011_9729c96c.jpg"
+            alt="Add a description of the image here."
             height="200"
             width="250">
+            <a target="_blank" href="https://s0.geograph.org.uk/geophotos/05/79/80/5798011_9729c96c.jpg">
+               </a>
+            <div class="desc">Add a description of the image here</div>
           </li>
 
         <li>Places to visite in Africa
           <br>
           <img
-            src="https://cdn.pixabay.com/photo/2017/06/14/23/12/kittens-2403664_960_720.jpg"
-            alt="Adorable gray kitten with blue eyes in brown woven wicker basket."
+            src="https://farm9.staticflickr.com/8789/17221666306_5444d01696_m.jpg"
+            alt="Add a description of the image here."
             height="200"
             width="250">
-
+            <div class="desc">Add a description of the image here</div>
         </li>
       </ul>
     </aside>
